--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
         "dotenv": "^10.0.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
-        "nodemon": "^2.0.7"
+        "mysql2": "^2.3.0",
+        "nodemon": "^2.0.7",
+        "sequelize": "^6.7.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
-        "@babel/preset-env": "^7.12.10"
+        "@babel/preset-env": "^7.12.10",
+        "sequelize-cli": "^6.2.0"
     }
 }
