--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/ryann126/booking-care#readme",
     "dependencies": {
         "@babel/node": "^7.12.10",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.5",
