Handle login API

--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
     "main": "src/server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec babel-node src/server.js"
+        "server": "nodemon --exec babel-node src/server.js"
     },
     "repository": {
         "type": "git",
@@ -21,6 +21,7 @@
         "@babel/node": "^7.12.10",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
